# replayguard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
data/: mcp-threat-scenarios.json
docs/: API_VERSIONING.md  BACKUP_RECOVERY.md  DATA_PROCESSING.md  DESIGN.md  DIAGNOSE_CLAIM_GRAPH.md  INCIDENT_RESPONSE.md  L1_SCALE_INGESTION.md  L2_PRODUCTION_TAP.md  L3_REGISTRY_MONITORING.md  L5_EXTERNAL_VALIDATION.md  N1_OTEL_BRIDGE.md  N2_FAILURE_LOCALIZATION.md  N3_PYTEST_PLUGIN.md  N4_MCP_REGISTRY_SWEEP.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md  PRIVACY.md  QUICKSTART_DIAGNOSE.md  RELEASE_CHECKLIST.md  RESEARCH_TRAIL_DIAGNOSIS.md  ROADMAP_BOUNDARIES.md  ROADMAP_V2.md  SELF_HOSTING.md  STACKED_DIAGNOSTICS_EXPERIMENT.md  STATUS.md  SUPPORT.md  TRAIL_TINY_MODEL_EXPERIMENT.md  X1_SEMANTIC_JUDGE.md  X2_THREAT_MAPPING.md  X3_COMPLIANCE_PACK.md  X4_TYPESCRIPT_SDK.md
examples/: aibom-manifest.json  gateway-policy.json  gateway-request.json  price-catalog-2025-06.json  public-regression-suite.json  quickstart.py  rag-suite.json  ship-demo-clean-candidate-map.json  ship-demo-regressed-candidate-map.json
schemas/: aibom-v1.schema.json  public-api-v1.contract.json  trace-v1.schema.json
scripts/: run-action.sh
tests/: test_category_assignment.py  test_claim_graph.py  test_cli.py  test_core.py  test_corpus.py  test_diagnostic_corpora.py  test_hypothesis_verification.py  test_meta_ranking.py  test_nested_router_experiment.py  test_packaging.py  test_phase2.py  test_phase3.py  (+24 more)
(+103 files in other folders)
